--- a/style.css
+++ b/style.css
@@ -2,4 +2,56 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: "Roboto", sans-serif;
+}
+
+.nav{
+    width: 100%;
+    height: 35px;
+    display: flex;
+    background-color: white;
+    align-items: center;
+    justify-content: space-around;
+    position: fixed;
+}
+
+.nav .logo h3{
+    font-size: 14px;
+    font-weight: 500;
+}
+.nav .logo h3 span{
+    font-weight: bolder;
+}
+
+.nav .list a{
+    color: black;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 11px;
+    margin-left: 8px;
+}
+
+.hero{
+    width: 100%;
+    height: 100vh;
+    background-image: url(images/architect.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.hero h3{
+    color: white;
+    font-size: 22px;
+    letter-spacing: 3px;
+    font-weight: 400;
+}
+.hero h3 span{
+    background-color: rgba(0, 0, 0, 0.831);
+    padding: 7px 10px;
+    font-size: 25px;
+    letter-spacing: 0px;
+    font-weight: bolder;
 }
