--- a/style.css
+++ b/style.css
@@ -39,9 +39,9 @@
     background-size: cover;
     background-repeat: no-repeat;
     background-position: bottom;
-    /* display: flex;
+    display: flex;
     align-items: center;
-    justify-content: center; */
+    justify-content: center;
 }
 .hero h3{
     color: white;
