--- a/style.css
+++ b/style.css
@@ -45,9 +45,9 @@
 }
 .hero h3{
     color: white;
-    /* font-size: 22px;
+    font-size: 22px;
     letter-spacing: 3px;
-    font-weight: 400; */
+    font-weight: 400;
 }
 .hero h3 span{
     background-color: rgba(0, 0, 0, 0.831);
